# vktest

./: .gitmodules  CMakeLists.txt  README.md
src/: Buffer.cpp  Buffer.h  CMakeLists.txt  Color.h  Decoder.cpp  Decoder.h  Fetch.cpp  Fetch.h  Image.h  Rect.cpp  Rect.h  Scene.cpp  Scene.h  Text.h  Utils.cpp  Utils.h  Window.cpp  Window.h  main.cpp
src/render/: RectPacker.cpp  RectPacker.h  Render.cpp  Render.h  RenderText.cpp  RenderText.h
src/scene/: Color.h  Scene.cpp  Scene.h  Text.h
src/shaders/: color.vert  image.vert  text.frag  text.vert
src/text/: Font.cpp  Font.h  Layout.cpp  Layout.h
